<resources>
    <string name="app_name">Adoptify</string>
    <string name="notifikasi">Notifikasi</string>
    <string name="today">Hari ini</string>
    <string name="success_topup">Top Up Berhasil!</string>
    <string name="dummy_description">Top up sebesar Rp. 300.000,00\ndari Gopay Indonesia</string>
    <string name="time">12.58</string>
    <string name="profile">Profile</string>
    <string name="username">Azizi Shafaa Asadel</string>
    <string name="dummy_email">zee@gmail.com</string>
    <string name="diamond_membership">Diamond Membership</string>
    <string name="dummy_point">2.300 Point</string>
    <string name="wallet_digital">Dompet Digital</string>
    <string name="owner_card">Nama pemilik kartu</string>
    <string name="dummy_date">12</string>
    <string name="exp_date">Exp. Date</string>
    <string name="number_credit_card">Nomor kartu debit/kredit</string>
    <string name="dummy_number">**** **** **** 9181</string>
    <string name="dummy_cvv">234</string>
    <string name="cvv">CVV</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="pencarian">Pencarian</string>
    <string name="personal">Personal</string>
    <string name="general">Umum</string>
    <string name="language">Bahasa</string>
    <string name="dummy_language">IND</string>
    <string name="widget">Widget Aplikasi</string>
    <string name="privacy">Kebijakan Privasi</string>
    <string name="help">Pusat Bantuan</string>
    <string name="about_app">Tentang Aplikasi</string>
    <string name="slide_to_exit">Geser untuk keluar</string>
    <string name="full_name">Nama Lengkap</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="place_born">Tanggal Lahir</string>
    <string name="number">Nomor telepon</string>
    <string name="e_mail">E-mail</string>
    <string name="address">Alamat Rumah</string>
    <string name="update_profile">Perbarui profil</string>
    <string name="change_profile">Perbarui Foto Profil</string>
    <string name="photo_profile">Foto profil</string>
    <string name="take_photo">Ambil Foto</string>
    <string name="choose_image">Pilih Gambar</string>
    <string name="photo_profile_banner">Pratinjau foto profil dan banner</string>
    <string name="save_change">Simpan perubahan foto profil</string>
    <string name="about_us">Tentang Kami</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="developer_app">Pengembang dan Perancang Aplikasi</string>
    <string name="headline_here">Headline disini</string>
    <string name="tab_text_1">Tentang Aplikasi</string>
    <string name="tab_text_2">Pengembang Aplikasi</string>
    <string name="cloud_computing">CLOUD COMPUTING</string>
    <string name="machine_learning">MACHINE LEARNING</string>
    <string name="mobile_development">MOBILE DEVELOPMENT</string>
    <string name="copyright">©2023 All rights reserved - Adoptify</string>
    <string name="next">Lanjutkan</string>
    <string name="desc_apps">Aplikasi yang dibuat untuk mengadopsi\ndan juga merawat hewan peliharaan kucing</string>
    <string name="welcome_text">Selamat Datang\ndi adoptify!</string>
    <string name="start">Mulai</string>
    <string name="login">Masuk</string>
    <string name="register">Buat akun\nbarumu!</string>
    <string name="btnregister">Buat akun baru</string>
    <string name="email">Email\n</string>
    <string name="checkbox_account">Simpan informasi akun</string>
    <string name="forget_account">Lupa kata sandi?\n</string>
    <string name="no_account">Belum memiliki akun?</string>
    <string name="daftar">Daftar</string>
    <string name="have_account">Sudah memiliki akun?\n</string>
    <string name="hubungkan_akun">Hubungkan\nakunmu!</string>
    <string name="greeting">Selamat siang!</string>
    <string name="dummy_user">Ny. Azizi Shafaa</string>
    <string name="dummy_name_pet">Cat House CF</string>
    <string name="desc_pet_house"><![CDATA[Pusat penampungan kucing & lainnya]]></string>
    <string name="dummy_distance">200 meter</string>
    <string name="logout">Keluar</string>
    <string name="find_shelter">Temukan\nShelter</string>
    <string name="activity">Aktivitas</string>
    <string name="news">Berita</string>
    <string name="settings">Pengaturan</string>
    <string name="title_home">Home</string>
    <string name="title_bookmark">Bookmark</string>
    <string name="title_shelter">Shelter</string>
    <string name="my_pet">Peliharaanku</string>
    <string name="dummy_id">#452134</string>
    <string name="age">Umur</string>
    <string name="add_pet">Tambah peliharaan baru</string>
    <string name="feature">Fitur Cepat</string>
    <string name="see_all">Lihat semua</string>
    <string name="adoption">Adopsi Hewan</string>
    <string name="desc_dog">Lorem ipsum dolor sit\namet, consectetur\nadipiscing elit.</string>
    <string name="see1">320 dilihat</string>
    <string name="subHeadline">The quick brown fox jumps over the lazy dog</string>
    <string name="news_content">Lorem ipsum dolor sit amet, consectetur\nadipiscing elit. Ut dapibus, mauris sed cursus\nmalesuada, elit mauris auctor leo, nec varius nunc\naugue sodales urna.</string>
    <string name="desc_shelter">The quick brown fox jumps over the lazy dog</string>
    <string name="shelter_content">Lorem ipsum dolor sit amet, consectetur\\nadipiscing elit. Ut dapibus, mauris sed cursus\\nmalesuada, elit mauris auctor leo, nec varius nunc\\naugue sodales urna.</string>
    <string name="review">(1.678 ulasan)</string>
    <string name="rate">4.0</string>
    <string name="filter">Saring daftar</string>
    <string name="about_app_description">Adoptify, an innovation of love for pets, is here with full
dedication to bring warmth and affection to our loyal
friends. As a leading pet adoption application.\n\n

Adoptify presents superior features that make it easier
for users to go through the adoption journey and
support pets who need help.</string>
    <string name="about_app_description_2">We have surveyed more than 100 pet lovers around
Malang. Around 90.1% of them stated that pet
adoption apps are a good solution to promote
adoption rather than purchasing pets from sellers
or pet shops to get the pet a decent home.\n\n

We also collected what urgency should be used as a
feature if this idea is applied to users. Some of the
surveys stated that they need an adoption feature for
abandoned animals. Then, a call center feature is also
required for users to get rescue regarding the nearest
shelter/pet shop/vet.\n\n

The last feature that is expected is a donation feature
to help animals that need funds or are affected
by illness without ownership.</string>
    <string name="categories">Kategori</string>
    <string name="update">Diperbarui 12/12/2023</string>
    <string name="title_tnc">Persyaratan\ndan Ketentuan</string>
    <string name="tnc_1">1 - Penerimaan Syarat dan Ketentuan</string>
    <string name="tnc_2">2 - Penggunaan Layanan</string>
    <string name="tnc_3">3 - Konten Pengguna</string>
    <string name="tnc_4">4 - Hak Kekayaan Intelektual</string>
    <string name="tnc_5">5 - Perubahan Syarat dan Ketentuan</string>
    <string name="tnc_6">6 - Penutup</string>
    <string name="desc_tnc_1">Dengan mengakses atau menggunakan aplikasi "Adoptify", Anda secara tegas menyetujui untuk terikat oleh semua syarat dan ketentuan yang tercantum dalam dokumen ini. Jika Anda tidak setuju dengan salah satu bagian dari syarat dan ketentuan ini, Anda tidak diperkenankan menggunakan layanan kami.</string>
    <string name="desc_tnc_2">
        <li>Penggunaan aplikasi "Adoptify" hanya diperuntukkan bagi mereka yang berusia 18 tahun ke atas. Pengguna yang di bawah usia ini harus mendapatkan izin dari orang tua atau wali sebelum menggunakan layanan kami.</li>\n
        <li>Setiap informasi yang Anda berikan kepada kami harus akurat dan terkini. Kami tidak bertanggung jawab atas informasi yang tidak akurat atau usang.</li>\n
        <li>Anda bertanggung jawab sepenuhnya atas keamanan akun Anda. Jangan memberikan informasi akun Anda kepada pihak lain dan pastikan untuk keluar dari sesi Anda setelah menggunakan aplikasi.</li>\n
    </string>
    <string name="desc_tnc_3">
        <li>Anda setuju bahwa konten yang Anda unggah atau bagikan melalui aplikasi "Adoptify" adalah tanggung jawab Anda sendiri. Kami tidak bertanggung jawab atas konten yang diunggah oleh pengguna.</li>\n
        <li>Kami berhak untuk menghapus atau menonaktifkan konten yang melanggar hukum atau melanggar syarat dan ketentuan yang telah ditetapkan.</li>\n
    </string>
    <string name="desc_tnc_4">
        <li>Aplikasi "Adoptify" dan semua konten yang terkait (kecuali konten yang diunggah oleh pengguna) merupakan milik kami atau pemberi lisensi kami dan dilindungi oleh hukum kekayaan intelektual yang berlaku.</li>\n
        <li>Pengguna tidak diberikan hak atau lisensi apa pun untuk menggunakan merek dagang, logo, atau konten lain yang terdapat dalam aplikasi "Adoptify" tanpa izin tertulis dari kami.</li>\n
    </string>
    <string name="desc_tnc_5">Kami berhak untuk mengubah, menambah, atau menghapus bagian dari syarat dan ketentuan ini sesuai dengan kebijakan kami. Perubahan tersebut akan berlaku segera setelah diterbitkan dalam aplikasi. Dengan tetap menggunakan layanan kami setelah perubahan tersebut, Anda dianggap menerima syarat dan ketentuan yang telah diperbarui.</string>
    <string name="desc_tnc_6">Syarat dan ketentuan ini mengatur hubungan antara pengguna dan aplikasi "Adoptify". Jika Anda memiliki pertanyaan atau masalah terkait dengan syarat dan ketentuan ini, jangan ragu untuk menghubungi kami melalui informasi yang tersedia di aplikasi. Terima kasih telah menggunakan aplikasi "Adoptify". Dengan menggunakan layanan kami, Anda menunjukkan pemahaman dan persetujuan Anda terhadap syarat dan ketentuan yang telah ditetapkan.</string>
    <string name="personal_data">Data Diri</string>
    <string name="pet_id">Pet ID</string>
    <string name="provinsi">Provinsi</string>
    <string name="post_code">Kode Pos</string>
    <string name="id_card">Kartu Identitas</string>
    <string name="water_mark">*Disertai dengan watermark Adoptify</string>
    <string name="transaction">Bukti Transaksi</string>
    <string name="remove_data">Bersihkan data</string>
    <string name="save_next"><![CDATA[Simpan & lanjutkan]]></string>
    <string name="saved_data">Data adopsimu\nberhasil disimpan!</string>
    <string name="done">Selesaikan</string>
    <string name="unsaved_data">Data adopsimu\ntidak disimpan!</string>
    <string name="show_detail">Tampilkan detail</string>
    <string name="close">Tutup</string>
    <string name="rupiah">Rp</string>
    <string name="nominal">3.600.000</string>
    <string name="cat">Kucing</string>
    <string name="desc_pet_problem">Kucing kecelakaan (patah kaki)</string>
    <string name="count_down">15 Hari waktu donasi tersisa</string>
    <string name="donation">Donasi</string>
    <string name="need_now">Membutuhkan sekarang</string>
    <string name="other">Lainnya</string>
    <string name="donation_success">Donasimu Berhasil\nDikirim!</string>
    <string name="notifikasi_donation">Donasi senilai Rp 210.000\ntelah dipotong dari saldomu</string>
    <string name="download">Unduh bukti</string>
    <string name="choose_nominal">Pilih nominal</string>
    <string name="choose_nominal_1">50</string>
    <string name="choose_nominal_rupiah">Nominal</string>
    <string name="ribu">.000</string>
    <string name="description_nominal">Lorem ipsum dolor sit amet,\nconsectetur adipiscing elit,\nsed do eiusmod tempor.</string>
    <string name="konfirmation_donation">Konfirmasi Donasi</string>
    <string name="name">Nama</string>
    <string name="send_email">Bukti donasi akan dikirimkan melalui e-mail terdaftar</string>
    <string name="telp">99631274</string>
    <string name="nominal_donation">Nominal Donasi</string>
</resources>