<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="350dp"
    android:layout_height="500dp"
    android:elevation="40dp"
    app:cardCornerRadius="30dp"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="47dp"
        android:layout_marginBottom="47dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ic_tnc"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:layout_marginStart="50dp"
                android:src="@drawable/ic_terms_conditions"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/title_tnc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="50dp"
                android:fontFamily="@font/plus_jakarta_sans_bold"
                android:text="@string/title_tnc"
                android:textColor="@color/headerColor"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ic_tnc"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/update_tnc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="40dp"
                android:fontFamily="@font/plus_jakarta_sans_regular"
                android:text="@string/update"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/title_tnc"
                app:layout_constraintTop_toBottomOf="@+id/title_tnc" />

            <View
                android:layout_width="52dp"
                android:layout_height="1dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="10dp"
                android:background="@color/hintTextColor"
                app:layout_constraintBottom_toBottomOf="@+id/logo_2"
                app:layout_constraintEnd_toStartOf="@+id/logo_2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/logo_2" />

            <ImageView
                android:id="@+id/logo_2"
                android:layout_width="124dp"
                android:layout_height="38dp"
                android:layout_marginTop="128dp"
                android:src="@drawable/logo_2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/view3"
                android:layout_width="52dp"
                android:layout_height="1dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="30dp"
                android:background="@color/hintTextColor"
                app:layout_constraintBottom_toBottomOf="@+id/logo_2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/logo_2"
                app:layout_constraintTop_toTopOf="@+id/logo_2" />

            <TextView
                android:id="@+id/tnc_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="30dp"
                android:fontFamily="@font/plus_jakarta_sans_semibold"
                android:text="@string/tnc_1"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logo_2" />

            <TextView
                android:id="@+id/desc_tnc_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="49dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="30dp"
                android:fontFamily="@font/plus_jakarta_sans_medium"
                android:text="@string/desc_tnc_1"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tnc_1" />

            <TextView
                android:id="@+id/tnc_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:fontFamily="@font/plus_jakarta_sans_semibold"
                android:text="@string/tnc_2"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/desc_tnc_1" />

            <TextView
                android:id="@+id/desc_tnc_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="49dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="30dp"
                android:fontFamily="@font/plus_jakarta_sans_medium"
                android:text="@string/desc_tnc_2"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tnc_2"
                app:layout_constraintTop_toBottomOf="@+id/tnc_2" />

            <TextView
                android:id="@+id/tnc_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:fontFamily="@font/plus_jakarta_sans_semibold"
                android:text="@string/tnc_3"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/desc_tnc_2" />

            <TextView
                android:id="@+id/desc_tnc_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="49dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="30dp"
                android:fontFamily="@font/plus_jakarta_sans_medium"
                android:text="@string/desc_tnc_3"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tnc_3"
                app:layout_constraintTop_toBottomOf="@+id/tnc_3" />

            <TextView
                android:id="@+id/tnc_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:fontFamily="@font/plus_jakarta_sans_semibold"
                android:text="@string/tnc_4"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/desc_tnc_3" />

            <TextView
                android:id="@+id/desc_tnc_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="49dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="30dp"
                android:fontFamily="@font/plus_jakarta_sans_medium"
                android:text="@string/desc_tnc_4"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tnc_4"
                app:layout_constraintTop_toBottomOf="@+id/tnc_4" />

            <TextView
                android:id="@+id/tnc_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:fontFamily="@font/plus_jakarta_sans_semibold"
                android:text="@string/tnc_5"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/desc_tnc_4" />

            <TextView
                android:id="@+id/desc_tnc_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="49dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="30dp"
                android:fontFamily="@font/plus_jakarta_sans_medium"
                android:text="@string/desc_tnc_5"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tnc_5"
                app:layout_constraintTop_toBottomOf="@+id/tnc_5" />

            <TextView
                android:id="@+id/tnc_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:fontFamily="@font/plus_jakarta_sans_semibold"
                android:text="@string/tnc_6"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/desc_tnc_5" />

            <TextView
                android:id="@+id/desc_tnc_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="49dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="30dp"
                android:fontFamily="@font/plus_jakarta_sans_medium"
                android:text="@string/desc_tnc_6"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tnc_6"
                app:layout_constraintTop_toBottomOf="@+id/tnc_6" />

            <CheckBox
                android:id="@+id/checkbox_meat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/plus_jakarta_sans_regular"
                android:text="Saya memahami SnK Adoptify"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/desc_tnc_6" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.cardview.widget.CardView>